--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>To Do List</title>
 		<link rel="stylesheet" type="text/css" href="todoList.css">
 		<script type="text/javascript" src="jquery-3.4.1.js"></script>
